--- a/templates/evening.html
+++ b/templates/evening.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <!-- Custom CSS for Evening Page -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/evening_custom.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/evening.css') }}">
 
 <div class="container-fluid fade-in-up mb-5" style="max-width: 1400px;">
 
@@ -300,3 +300,4 @@
     });
 </script>
 {% endblock %}
+
